objects/Assign_Primary_Community_User__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Assign Primary Community User</label>
    <fields>
        <fullName>Disable_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Lead_Profiles__c</fullName>
        <label>Disable Lead Profiles</label>
        <type>TextArea</type>
    </fields>
</CustomObject>